// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`custom serialization serialize on server and deserialize on client 1`] = `
Object {
  "initialProps": Object {},
  "initialState": Object {
    "reduxStatus": "init",
    "serialized": true,
  },
}
`;

exports[`custom serialization serialize on server and deserialize on client 2`] = `
<div>
  {"props":{},"state":{"reduxStatus":"init","serialized":true,"deserialized":true}}
</div>
`;

exports[`function API getInitialAppProps (simple context) 1`] = `
Object {
  "ctx": Object {
    "req": "request",
    "store": Object {
      "dispatch": [MockFunction],
      "getState": [MockFunction],
      "subscribe": [MockFunction],
    },
  },
}
`;

exports[`function API getInitialAppProps (simple context) 2`] = `
Object {
  "initialProps": Object {
    "pageProps": Object {
      "prop": "val",
    },
  },
  "initialState": Object {
    "state": "val",
  },
}
`;

exports[`function API getInitialPageProps (context with store) 1`] = `
Object {
  "req": "request",
  "store": "foo",
}
`;

exports[`function API getInitialPageProps (context with store) 2`] = `
Object {
  "pageProps": Object {
    "prop": "val",
  },
}
`;

exports[`function API getInitialPageProps (simple context) 1`] = `
Object {
  "req": "request",
  "store": Object {
    "dispatch": [MockFunction],
    "getState": [MockFunction],
    "subscribe": [MockFunction],
  },
}
`;

exports[`function API getInitialPageProps (simple context) 2`] = `
Object {
  "initialProps": Object {
    "pageProps": Object {
      "prop": "val",
    },
  },
  "initialState": Object {
    "state": "val",
  },
}
`;

exports[`function API getInitialPageProps context with store & no callback 1`] = `undefined`;

exports[`function API getServerSideProps (simple context) 1`] = `
Object {
  "req": "request",
  "store": Object {
    "dispatch": [MockFunction],
    "getState": [MockFunction],
    "subscribe": [MockFunction],
  },
}
`;

exports[`function API getServerSideProps (simple context) 2`] = `
Object {
  "props": Object {
    "initialState": Object {
      "state": "val",
    },
    "prop": "val",
  },
}
`;

exports[`function API getStaticProps (simple context) 1`] = `
Object {
  "preview": true,
  "previewData": "previewData",
  "store": Object {
    "dispatch": [MockFunction],
    "getState": [MockFunction],
    "subscribe": [MockFunction],
  },
}
`;

exports[`function API getStaticProps (simple context) 2`] = `
Object {
  "props": Object {
    "initialState": Object {
      "state": "val",
    },
    "prop": "val",
  },
  "revalidate": true,
}
`;

exports[`withRedux merges props for app case 1`] = `
<div>
  {"props":{"pageProps":{"fromApp":true,"getStaticProp":true}},"state":{"reduxStatus":"init"}}
</div>
`;

exports[`withRedux merges props for page case 1`] = `
<div>
  {"props":{"fromPage":true,"somePropFromNextJs":true},"state":{"reduxStatus":"init"}}
</div>
`;

exports[`withRedux wrapped component should have getInitialProps if source component have it 1`] = `
Object {
  "prop": "val",
}
`;

exports[`withRedux wrapped component should have getInitialProps if source component have it 2`] = `
<div>
  {"props":{},"state":{"reduxStatus":"init"}}
</div>
`;
